--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
+    compile project(":business")
+    compile project(":datasource")
+    compile project(":model")
 }
