#ADD#1、引入jpinyin开源api，新增汉字转拼音功能，完善拼音显示。

--- a/business/build.gradle
+++ b/business/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(":datasource")
     compile project(":model")
+    compile 'com.github.SilenceDut:jpinyin:v1.0'
 }
